# mit_ics

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg
docs/: conf.py  index.rst  requirements.txt
src/exercises/: __init__.py  ps1.py
tests/: test_skeleton.py
